--- a/styles.css
+++ b/styles.css
@@ -60,6 +60,7 @@ li {
 .hero .content {
     display: flex;
     flex-direction: column;
+    overflow: hidden;
     height: 300px;
     padding-right: 50px;
     justify-content: space-between;
@@ -125,6 +126,7 @@ li {
 .random_info .content {
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
     gap: 60px;
 }
 
